# deepsphere-cosmo-pytorch

./: README.md  pyproject.toml  setup.cfg
deepsphere/: __init__.py  gnn_layers.py  gnn_transformers.py  healpy_layers.py  healpy_networks.py  utils.py
examples/: map_only_regression.py
tests/: test_gnn_layers.py  test_gnn_transformers.py  test_healpy_layers.py  test_healpy_networks.py  test_layout.py  test_map_only_regression_example.py  test_utils.py
