[metadata]
name = deepsphere
version = attr: deepsphere.__version__
author = Fluri Janis
author_email = janis.fluri@inf.ethz.ch
url = https://github.com/deepsphere
description = DeepSphere in PyTorch for HEALPix spherical CNNs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = healpy, graph convolutions

[options]
packages = find:
install_requires =
    numpy
    scipy
    healpy
    torch
    matplotlib
    PyGSP @ git+https://github.com/jafluri/pygsp.git@sphere-graphs
    tqdm
    pytest
    scikit-learn
    pytest
    pytest-cov
    pre-commit
    black
    flake8

[options.packages.find]
include = deepsphere*

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 120
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,W503